[project]
name = "langsmith-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.24.0",
    "chromadb>=1.0.16",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ipython>=9.4.0",
    "langchain-anthropic>=0.3.18",
    "langchain-aws>=0.2.30",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-experimental>=0.3.4",
    "langchain-google-vertexai>=2.0.28",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-sdk>=0.2.0",
    "langgraph-supervisor>=0.0.29",
    "langsmith>=0.2.0",
    "lxml>=6.0.0",
    "notebook>=7.4.5",
    "openai>=1.99.9",
    "openevals>=0.1.0",
    "pandas>=2.3.1",
    "protobuf>=3.20.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyppeteer>=0.0.25",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "tavily-python>=0.7.10",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "cicd*", "notebooks*"]
